--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.5",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
@@ -31,6 +32,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3"
   }
 }
