--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.5",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
@@ -37,6 +38,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "nock": "^13.5.5",
+    "supertest": "^7.0.0"
   }
 }
