--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "nock": "^13.5.5",
