--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
@@ -41,6 +42,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-openapi-validator": "^5.3.7",
+    "express-rate-limit": "^7.4.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
